upload form done....view page to be constructed

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -8,7 +8,9 @@
     		<img src="assets/images/yeoman.png" alt="I'm Yeoman">
   		</div>
 	</header>
-
+	<div class="col-md-12">
+		<button class="btn btn-primary" ng-click="toUploadPortal()">Upload Here</button>
+	</div>
 <!--This div for displaying the stage-holders that day( the videos booked for that day)  -->
 	<div class="col-md-8">
 		<a href="#">
@@ -30,6 +32,10 @@
 			</li>
 		</ul>
 	</div>
+	<!-- to be ignored ;) to be implemented later
+	<p>{{user.updatedOn | date:'medium'}}</p>
+	<p>{{user.createdOn | date:'medium'}}</p>
+	testing -->
 
 	<!--To be put:: The recent videos uploaded and trending videos divs-->
 </div>
