--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,8 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/dashboard/dashboard.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/profile/profile.css">
+      <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -81,6 +83,11 @@
           <script src="app/dashboard/dashboardService.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/profile/profile.controller.js"></script>
+          <script src="app/profile/profile.js"></script>
+          <script src="app/uploadPortal/uploadPortal.controller.js"></script>
+          <script src="app/uploadPortal/uploadPortal.js"></script>
+          <script src="app/uploadPortal/uploadPortalService.service.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
