view page done....

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/profile/profile.css">
       <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
+      <link rel="stylesheet" href="app/viewPage/viewPage.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -88,6 +89,9 @@
           <script src="app/uploadPortal/uploadPortal.controller.js"></script>
           <script src="app/uploadPortal/uploadPortal.js"></script>
           <script src="app/uploadPortal/uploadPortalService.service.js"></script>
+          <script src="app/viewPage/viewPage.controller.js"></script>
+          <script src="app/viewPage/viewPage.js"></script>
+          <script src="app/viewPage/viewPageService.service.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
