--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -17,7 +17,7 @@
 		<p>Last logged in on {{user.updatedOn | date:'medium'}}</p>
 		<ul>
 			<li ng-repeat="video in user.videos">
-				<a href="#">
+				<a href="#" ng-click="watchVid(video.vidurl)">
 					<img src="{{video.posterurl}}">
 					<p>Name : {{video.vidname}}</p>
 					<p>Description:{{video.description}}</p>
