--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
       <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
       <link rel="stylesheet" href="app/viewPage/viewPage.css">
       <link rel="stylesheet" href="components/modal/modal.css">
+      <link rel="stylesheet" href="components/navbar/navbar.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
