--- a/client/app/viewPage/viewPage.html
+++ b/client/app/viewPage/viewPage.html
@@ -5,4 +5,33 @@
 	<div class="col-xs-6" my-youtube code='vidCode'>
 		
 	</div>
+	<!--<div class="stars">
+  <form>
+    <input class="star star-5" id="star-5" type="radio" name="star"/>
+    <label class="star star-5" for="star-5"></label>
+    <input class="star star-4" id="star-4" type="radio" name="star"/>
+    <label class="star star-4" for="star-4"></label>
+    <input class="star star-3" id="star-3" type="radio" name="star"/>
+    <label class="star star-3" for="star-3"></label>
+    <input class="star star-2" id="star-2" type="radio" name="star"/>
+    <label class="star star-2" for="star-2"></label>
+    <input class="star star-1" id="star-1" type="radio" name="star"/>
+    <label class="star star-1" for="star-1"></label>
+  </form> -->
+  	<div class="col-xs-3" simple ng-model="rating1" max="5" on-rating-selected="rateFunction(rating)"></div>
+  	<div class="col-xs-6">
+  		<div>
+            <h4>Leave a Comment:</h4>
+            <form name="myForm" ng-submit="submit()" class="form" novalidate> 
+                <div class="form-group">
+            		<textarea class="form-control" rows="3" ng-model="commentdata"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+        <div>
+        	<div></div>
+        </div>
+  	</div>
+</div>
 </div>
