--- a/client/index.html
+++ b/client/index.html
@@ -86,6 +86,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/profile/profile.controller.js"></script>
           <script src="app/profile/profile.js"></script>
+          <script src="app/simple/simple.directive.js"></script>
           <script src="app/uploadPortal/uploadPortal.controller.js"></script>
           <script src="app/uploadPortal/uploadPortal.js"></script>
           <script src="app/uploadPortal/uploadPortalService.service.js"></script>
