--- a/client/app/uploadPortal/uploadPortal.html
+++ b/client/app/uploadPortal/uploadPortal.html
@@ -25,6 +25,10 @@
 				<label>Description</label>
 				<input type="text" class="form-control" ng-model="form.description">
 			</div>
+			<div class="form-group">
+				<label>Directors</label>
+				
+			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 	</div>
