--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,17 +1,20 @@
 <div ng-controller="ProfileCtrl">
 	<div ng-include="'components/navbar/navbar.html'"></div>
-
+<!--
 	<header class="hero-unit" id="banner">
- 		<div class="stage" id="user_profile">
-            <div id="pro_pic"><img src="Pro_pic/DSC09016.JPG" style="width:300px;height:200px"></img></div>
-            <div id="name">
-                <span><h2>Venkat Teja</h2></span>
-            </div>
-        </div>
-        <div id="infodiv">
-            <span id="info">Director Editor Screenwriter</br></span>
-            <span id="info">9th Feb 1996</span>
-        </div>
+ 		<div class="stage" id="user_profile">-->
+            <div id="pro_pic"><img src="Pro_pic/DSC09016.JPG" style="width:100%;height:100%;"></img>
+	            <div id="user_profile">
+		            <div id="name">
+		                <span><h2>Venkat Teja</h2></span>
+		            </div>
+		        
+		        	<div id="infodiv">
+		            	<span id="info">Director Editor Screenwriter</br></span>
+		            	<span id="info">9th Feb 1996</span>
+		        	</div>
+	        	</div>
+	        </div>
 	</header>
 	 <div class="stage" id="user_hist_div1">
             <div id="user_hist_div2" class="stage">
@@ -30,3 +33,4 @@
 				</ul>
 			</div>
 	</div>
+</div>
