--- a/client/app/viewPage/viewPage.html
+++ b/client/app/viewPage/viewPage.html
@@ -2,8 +2,11 @@
 	<div ng-include="'components/navbar/navbar.html'"></div>
 
 	<div class="stage" id="video">
-            <iframe width="900" height="506.25" src="https://www.youtube.com/embed/VdafjyFK3ko?autoplay=1" frameborder="0" style="box-sizing:border-box;
+        <div class="wrapper">
+         <img src="http://www.solidbackgrounds.com/images/1280x720/1280x720-ghost-white-solid-color-background.jpg" alt="" id="video_play"/>
+            <iframe width="80vw" height="45vw" src="https://www.youtube.com/embed/VdafjyFK3ko?autoplay=1" frameborder="0" style="box-sizing:border-box;
             box-shadow:0px 5px 10px black;" allowfullscreen></iframe>
+        </div>
             <div class="content" id="title">
                 <span id="video_name">Infinite reasons to smile</span>
             </div>
