Can remove uploadportal, added upload button to profile, and book button to each video

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -25,7 +25,7 @@
 								<div class="thumbs_out">
 									<div class="thumbs_in">
 										<a href="#" ng-click="watchVid(video.video.vidurl)">
-											<img src="{{video.posterurl}}" height="auto" style="z-index:-1" id="image" width=250px>
+											<img src="{{video.posterurl}}" height="auto" style="z-index:-1" id="image" width=250px class="img-thumbnail">
 											<span class="thumb_trnsprnt">
 											</span>
 											<span  class="thumb_cntnt">
