Add backend done till nw, after tht css wil continue

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -110,7 +110,7 @@
 							
 							<div class="thumbs_out">
 								<div class="thumbs_in">
-									<div class="user_art_info2">
+									<div id="user_art_info2" class="img-thumbnail">
 										    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Book
 										    <span class="caret"></span></button>
 										    </div>
@@ -124,4 +124,5 @@
 				</ul>
 			</div>
 	</div>
+	<!--user content ends here-->
 </div>
