--- a/client/app/uploadPortal/uploadPortal.html
+++ b/client/app/uploadPortal/uploadPortal.html
@@ -1,5 +1,8 @@
 <div ng-controller="UploadPortalCtrl">
 	<div ng-include="'components/navbar/navbar.html'"></div>
+	 <p>This is a paragraph.</p>
+
+<button>Toggle between hide() and show()</button>
 
 	<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#upload">Open Modal</button>
 
