--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,13 @@
     <!-- endbuild -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function(){
+          $("button").click(function(){
+              $("p").toggle();
+          });
+      });
+    </script>
   
   </head>
   <body ng-app="myAppApp">
@@ -105,5 +112,11 @@
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
+        
+
+
+         <!--Js code of above credits collapsing and opening-->
+                 
+                <!--js ends-->
 </body>
 </html>
