--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -25,11 +25,11 @@
 								<div class="thumbs_out">
 									<div class="thumbs_in">
 										<a href="#" ng-click="watchVid(video.video.vidurl)">
-											<img src="{{video.posterurl}}" height="auto" style="z-index:-1" id="image" width=250px class="img-thumbnail">
+											<img src="{{video.video.posterurl}}" height="auto" style="z-index:-1" id="image" width=250px class="img-thumbnail">
 											<span class="thumb_trnsprnt">
 											</span>
 											<span  class="thumb_cntnt">
-												Infinte reasons to smile {{video.vidname}}
+												Infinte reasons to smile {{video.video.vidname}}
 											</span>	
 										</a>
 									</div>
