--- a/client/app/viewPage/viewPage.html
+++ b/client/app/viewPage/viewPage.html
@@ -4,7 +4,7 @@
 	<div class="stage" id="video">
         <div class="wrapper">
          <img src="http://www.solidbackgrounds.com/images/1280x720/1280x720-ghost-white-solid-color-background.jpg" alt="" id="video_play"/>
-            <iframe width="80vw" height="45vw" src="https://www.youtube.com/embed/VdafjyFK3ko?autoplay=0" frameborder="0" style="box-sizing:border-box;
+            <iframe width="80vw" height="45vw" src="https://www.youtube.com/embed/vvLBXO94EfA?autoplay=1" frameborder="0" style="box-sizing:border-box;
             box-shadow:0px 5px 10px black;" allowfullscreen></iframe>
         </div>
         <div class="content" id="title">
