profile and upload portal backend working up

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -29,7 +29,7 @@
 											<span class="thumb_trnsprnt">
 											</span>
 											<span  class="thumb_cntnt">
-												Infinte reasons to smile {{video.video.vidname}}
+												{{video.video.vidname}}:::::{{video.video.description}}
 											</span>	
 										</a>
 									</div>
