--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -39,7 +39,7 @@
 					  </ul>
 
 					<div class="tab-content">
-						<div class="tab-pane fade in active" id="upload_form">
+						<div class="tab-pane fade in active" id="upload_form" ng-controller="UploadPortalCtrl">
 
 								<form name="form" ng-submit="submit(form)">
 									<div class="form-group">
