--- a/client/app/viewPage/viewPage.html
+++ b/client/app/viewPage/viewPage.html
@@ -1,16 +1,11 @@
-<div ng-controller="ViewPageCtrl">
+<div ng-controller="ViewPageCtrl" id="viewpage">
 	<div ng-include="'components/navbar/navbar.html'"></div>
 
-	<div class="stage" id="video">
+	<div  id="video">
         <div class="wrapper">
          <img src="http://www.solidbackgrounds.com/images/1280x720/1280x720-ghost-white-solid-color-background.jpg" alt="" id="video_play"/>
-<<<<<<< HEAD
-            <iframe width="80vw" height="45vw" src="https://www.youtube.com/embed/vvLBXO94EfA?autoplay=1" frameborder="0" style="box-sizing:border-box;
-            box-shadow:0px 5px 10px black;" allowfullscreen></iframe>
-=======
             <div my-youtube code='vidCode'>
             </div>
->>>>>>> 27759a69c659785cae51250a355ec7d0b929f6b1
         </div>
         <div class="content" id="title">
             <span id="video_name">{{video.vidname}}</span>
@@ -18,7 +13,7 @@
         <div simple ng-model="rating1" max="5" on-rating-selected="rateFunction(rating)"></div>
     </div>
       <!-- info, comments, reviews etc of video-->
-        <div class="stage">
+        <div class="stage" id="vid_stuff">
             <div class="content">
             <!--Crew and cast-->
                 <div id="credits" >
