--- a/client/app/viewPage/viewPage.html
+++ b/client/app/viewPage/viewPage.html
@@ -40,10 +40,10 @@
 
                  <!--tab content-->
                 <div class="tab-content">
-                    <div id="best_part" class="tab-pane fade in active">
+                    <div id="best_part" class="tab-pane fade">
                         <h3>Best part<hr></hr></h3>
                     </div>
-                    <div id="comments" class="tab-pane fade">
+                    <div id="comments" class="tab-pane fade in active">
                         <h2>Comments<hr></hr></h2>
                         <div>
                             <div>
