--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,11 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/dashboard/dashboard.css">
+      <link rel="stylesheet" href="app/event/event.css">
+      <link rel="stylesheet" href="app/group/group.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/profile/profile.css">
+      <link rel="stylesheet" href="app/stage/stage.css">
       <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
       <link rel="stylesheet" href="app/viewPage/viewPage.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -92,11 +95,17 @@
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/dashboard/dashboardService.service.js"></script>
+          <script src="app/event/event.controller.js"></script>
+          <script src="app/event/event.js"></script>
+          <script src="app/group/group.controller.js"></script>
+          <script src="app/group/group.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/profile/profile.controller.js"></script>
           <script src="app/profile/profile.js"></script>
           <script src="app/simple/simple.directive.js"></script>
+          <script src="app/stage/stage.controller.js"></script>
+          <script src="app/stage/stage.js"></script>
           <script src="app/uploadPortal/uploadPortal.controller.js"></script>
           <script src="app/uploadPortal/uploadPortal.js"></script>
           <script src="app/uploadPortal/uploadPortalService.service.js"></script>
